code/micro-g1-k8s/k8s/1-3-deploy-services-order.yaml
# Persistent Data PostgreSQL
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: postgres-pvc
#spec:
#  accessModes:
#    - ReadWriteOnce # This volume can be mounted by a single node
#  resources:
#    requests:
#      storage: 1Gi # Request 1 Gibibyte of storage

---
# Deploy Database PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    app: postgres
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: v1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            # - name: postgres-storage
            #              mountPath: /var/lib/postgresql/data
            #              subPath: postgres
            - name: postgres-init-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc # Use the PVC for storage
        - name: postgres-init-scripts
          configMap:
            name: postgres-init-scripts
---
# Deploy app services-order
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-order-deploy
  labels:
    app: services-order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-order
      version: v1
  template:
    metadata:
      labels:
        app: services-order
        version: v1
    spec:
      containers:
        - name: services-order
          image: eduardovizuete/service-order:1.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /services-order/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /services-order/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: services-order-config
